Change styling To stop scroll going behind the footer

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,9 @@
+.App {
+  display: flex;
+  flex-direction: column;
+  max-height: 100vh;
+}
+
 body {
   background-color: #181818;
   color: white;
@@ -7,7 +13,6 @@ body {
 .container {
   padding: 0 20px;
   overflow: auto;
-  max-height: 100vh;
 }
 
 .songListHeader:first-of-type {
@@ -130,7 +135,7 @@ li {
 }
 
 .played .song:last-of-type {
-  margin-bottom: 90px;
+  margin-bottom: 30px;
 }
 
 .dotOverflow {
@@ -150,8 +155,6 @@ li {
 }
 
 footer {
-  position: fixed;
-  bottom: 0;
   width: 100%;
   height: 70px;
   background-color: #282828;
